public/css/style.css
/* CSS THAT APPLIES TO ALL */
html {
  height: 100%;
}

.container {
  height: 100%;
}
/* MAIN PAGE CSS */
#main {
  background-image: url('http://i.huffpost.com/gen/1902909/images/o-PEOPLE-TALKING-facebook.jpg');
  background-size: 1366px 768px;
  background-repeat: no-repeat;
  max-height: 100%;
  max-width: 100%;
}

.navbar-default {
  background-color: rgba(0,0,0,.3);
  border-radius: 0 !important;
  border: none;
}

.navbar-default .navbar-nav>li>.signup {
  color: rgba(255,255,235,.9);
}

.title {
  font-family: "HelveticaNeueThinExtended", "HelveticaNeue-Thin-Extended", "Helvetica Neue Thin Extended", "HelveticaNeueThin", "HelveticaNeue-Thin", "Helvetica Neue Thin", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Arial", sans-serif; font-weight:200; font-stretch:expanded;
  font-size: 115px;

}

.signup-button {
  color: black;
  font-family: "HelveticaNeueBlack", "HelveticaNeue-Black", "Helvetica Neue Black", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Arial Black", sans-serif; font-weight:800; font-stretch:normal;
  font-size: 45px;
  background: rgba(0,0,0,.1);
  border-radius: 0;
  border-color: black;

  /* CSS Transition */
  -webkit-transition: background .2s ease-in-out, border .2s ease-in-out;
  -moz-transition: background .2s ease-in-out, border .2s ease-in-out;
  -ms-transition: background .2s ease-in-out, border .2s ease-in-out;
  -o-transition: background .2s ease-in-out, border .2s ease-in-out;
  transition: background .2s ease-in-out, border .2s ease-in-out;
}

.signup-button:hover {
  color: white;
  background:rgba(0,0,0,.8);
}

.about-button {
  color: black;
  font-family: "HelveticaNeueBlack", "HelveticaNeue-Black", "Helvetica Neue Black", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Arial Black", sans-serif; font-weight:800; font-stretch:normal;
  font-size: 45px;
  background: rgba(0,0,0,.1);
  border-radius: 0;
  border-color: black;

  /* CSS Transition */
  -webkit-transition: background .2s ease-in-out, border .2s ease-in-out;
  -moz-transition: background .2s ease-in-out, border .2s ease-in-out;
  -ms-transition: background .2s ease-in-out, border .2s ease-in-out;
  -o-transition: background .2s ease-in-out, border .2s ease-in-out;
  transition: background .2s ease-in-out, border .2s ease-in-out;
}

.about-button:hover {
  color: white;
  background:rgba(0,0,0,.8);
}

.valign {
  margin-top: -75px;
}

@media (min-width: 768px) {
  .navbar {
    border-radius: none;
  }
}

fieldset.title {
    border-top: 1px solid #aaa;
    border-bottom: none;
    border-left: none;
    border-right: none;
    display: block;
    text-align: left;
}

fieldset.title legend {
    padding: 5px 10px;
    font-family: "HelveticaNeueThinExtended", "HelveticaNeue-Thin-Extended", "Helvetica Neue Thin Extended", "HelveticaNeueThin", "HelveticaNeue-Thin", "Helvetica Neue Thin", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Arial", sans-serif; font-weight:200; font-stretch:expanded;
    font-size: 115px;
}

.subindexrow {
  margin-right: 0;
  margin-left: 0;
  margin-top: 30%;
  height: 35%;
}

.about {
  margin-top: 2.5%;
}

.about-title {
  font-family: "HelveticaNeueThinExtended", "HelveticaNeue-Thin-Extended", "Helvetica Neue Thin Extended", "HelveticaNeueThin", "HelveticaNeue-Thin", "Helvetica Neue Thin", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Arial", sans-serif; font-weight:200; font-stretch:expanded;
}

.about-title-main {
  font-family: "HelveticaNeueThinExtended", "HelveticaNeue-Thin-Extended", "Helvetica Neue Thin Extended", "HelveticaNeueThin", "HelveticaNeue-Thin", "Helvetica Neue Thin", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Arial", sans-serif; font-weight:200; font-stretch:expanded;
  font-size: 46px;
}

.about-row {
  margin-top: 3.1% ;
  padding-bottom: 3%;
}

.about-dev-row {
  padding-bottom: 3%;
}

.about-app-row {
  padding-bottom: 3%;
}

.dev-title {
  padding-right: 5%;
}

.about-title{
  padding-right:5%;
}

.navbar-footer {
  margin-top: 2%;
  margin-bottom: 0;
  background-color: rgba(0,0,0,.85);
}

div.navbar.navbar-default.navbar-footer {
  height: 50px;
}

/* AUTH PAGE CSS */

.signup-body {
  background-color: rgba(255,255,233,.1);
  height: 100%;
}

.navbar-default .navbar-nav>li>.home {
  color: rgba(255,255,235,.9);
}

.fa {
  color: rgba(0,10,10,.9);
}

.signup-col {
  text-align:center;
  height: 100%;
  position: relative;
}

.signup-or {
  vertical-align: middle;
  position: relative;
  margin-top: 9.7%
}


.signup-titles {
  font-size: 25px;
}

.signup-btn {
  background-color: rgba(0,10,10,.9);
  border-color: rgba(0,10,10,.9);
  color: rgba(255,255,235,.9)
}
.signup-btn:hover {
  background-color: rgba(10,10,10,.4);
  border-color: rgba(10,10,10,.4);
  color: rgba(0,10,10,.9);
}
.hr-divider {
  width: 75%;
}

/* AUTH PAGE 1 CSS */
.language-select {
  overflow: auto;
  min-height:350px;
  max-height: 375px;
}
.language-name {
  display: block;
  font-weight: normal !important;
}
.language-submit-btn {
  background-color: rgba(0,10,10,.9);
  border-color: rgba(0,10,10,.9);
  color: rgba(255,255,235,.9);
}
.language-submit-btn:hover {
  background-color: rgba(10,10,10,.4);
  border-color: rgba(10,10,10,.4);
  color: rgba(0,10,10,.9);
}
.btn-div {
  text-align: center;
  padding-top: 10px;
}
.logged-container {
  width: 90%;
}

/* HOME CSS */
.dropdown {
  background-color: rgba(0,0,0,0);
  border-color: rgba(0,0,0,0);
}

.navbar-default .navbar-nav>li>a {
  color:white;
}
nav ul {
  color: white;
  list-style-type:none;
  margin:0;
  padding:0;
}
nav ul li {
  display:inline-block;
  position:relative;
}
nav li ul {
    background-color:rgb(225,75,75);
    position:absolute;
    left:0;
    top:40px;
    width:200px;
}

nav a {
    line-height:40px;
    padding:0 12px;
    margin:0 12px;
}
nav a {
    color:#fff;
    text-decoration:none;
    display:block;
}
nav a:hover,
nav a:focus,
nav a:active {
    color:rgb(50,50,50);
}
.dropdown-menu {
  display:none;
}

.map-row {
  width: 725px;
}

#mapCon{
  display: visible;
  border: 2px black;
  width: 100%;
}
#map{
  width:100%;
  height: 500px;
}

/* PROFILE CSS*/
.bio {
  height: 150px;
}

